--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="davno-obeshchala-napisat-" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89376508_3434455293315997_5136329399629063670_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=bfbm_klZWJoAX8IxaUL&oh=69c9fcd76d7b41fc3841644a5bea6124&oe=5E932A46" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Давно обещала написать">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="gde-naytix-zashchitu-ot-virusov" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87861832_625370131360615_7022457707105560149_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=SmVDFJJqOjkAX8Dxi1t&oh=2b5334a360909fb0bae772b020279db4&oe=5E98B027" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ГДЕ НАЙТИ  ЗАЩИТУ ОТ ВИРУСОВ">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="retsept-bezzhirovogo-sousa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=4BP0JZ9j7KgAX_QIIoP&oh=82d58ce26e64ea3d580c711bd8f831e4&oe=5E968B22" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/88197176_102353821338258_4063892763466591489_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=RG3XnTTMOgMAX9pmfMT&oh=f39d892293b20ac10281026d9183fc38&oe=5E968B22" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РЕЦЕПТ БЕЗЖИРОВОГО СОУСА">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bananovyy-fosterxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=XT3qhiyRo00AX9WWOsD&oh=577847c42e9157e05b2c5211e64a6e73&oe=5E628436" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=KOAaF2_kyEkAX9QsCny&oh=11a4d56b8d08a33f3137b391535196c0&oe=5E63D5B6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="post-dlya-pozdravleniy-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=8SoBC0lOcgEAX8VYhmV&oh=103915ea5c86875014b63648a3782b40&oe=5E99DF92" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=o3UA7z6NLWgAX_0K0Iv&oh=cd685a1a39dbef475592c78ae5093048&oe=5E99DF92" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rozmarinxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=l9PNHOzWzOkAX_NR0wh&oh=d5b88ec1760a4d5fc17bcc34478bf72f&oe=5E930E63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=TmlHkgLXbFYAX_X7Br-&oh=23c81a0bc9b915fd31c7089bbbce32d4&oe=5E930E63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-spravit-sya-so-streptokokkom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=r3laQONYwggAX-DFBV0&oh=0d4bf68c3cc95285e103cad40ddfacbe&oe=5E96A4A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="superbakteriya-streptokokk" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=Bce9b9IBsL4AX-X8454&oh=25110a0debebd11a29c2a39b1f108e42&oe=5E8F3924" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=v9CSq05Pb98AX8uwlEh&oh=88d435c8222bde7e38511635fa4fc565&oe=5E96A4A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
